--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 html {
-  scroll-behavior: smooth;
+  --scroll-behavior: smooth !important;
+  scroll-behavior: smooth !important;
 }
 
 @layer base {
