--- a/components/proyects.module.css
+++ b/components/proyects.module.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap");
 
 .titles {
   font-family: "Bruno Ace", cursive;
-}
+} */
