--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap"); */
 html {
   --scroll-behavior: smooth !important;
   scroll-behavior: smooth !important;
@@ -37,6 +37,6 @@ button {
   @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white;
 }
 
-.titles {
+/* .titles {
   font-family: "Bruno Ace", cursive;
-}
+} */
