--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* @import url("https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap"); */
+
 html {
   --scroll-behavior: smooth !important;
   scroll-behavior: smooth !important;
 }
 
-@layer base {
+/* @layer base {
   body {
     @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide;
   }
-}
+} */
 
 h1,
 h2,
@@ -34,8 +34,11 @@ li {
 }
 
 button {
-  @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white;
+  @apply shadow-sm shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white;
 }
+/* button {
+  @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white;
+} */
 
 /* .titles {
   font-family: "Bruno Ace", cursive;
